# rust-x-loki-grafana-logging-system

./: Cargo.toml  README.md  docker-compose.yaml  makefile
src/: main.rs
src/application/: mod.rs  weapon_use_case.rs
src/config/: mod.rs  model.rs
src/domain/: mod.rs  weapon_entities.rs  weapon_models.rs  weapon_repository.rs
src/infrastructure/: mod.rs  observability.rs
src/infrastructure/loki/: mod.rs
src/infrastructure/mock_db/: repository.rs
src/infrastructure/ntex_http/: mod.rs  weapon_routes.rs
