[package]
name = "observability-but-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
ntex = { version = "2.0", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-loki = "0.2.6"
anyhow = { version = "1.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.14", features = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
    "serde",
] }
async-trait = "0.1.86"
